--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -198,7 +198,7 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
 
-                <data android:scheme="bitcoin" />
+                <data android:scheme="electra" />
             </intent-filter>
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
